[gd_scene load_steps=6 format=2]

[ext_resource path="res://Plane.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]
[ext_resource path="res://Projectile.tscn" type="PackedScene" id=4]
[ext_resource path="res://InGameUI.tscn" type="PackedScene" id=5]

[node name="Player" type="Spatial"]
script = ExtResource( 2 )
Projectile = ExtResource( 4 )

[node name="Plane" parent="." instance=ExtResource( 1 )]

[node name="ForwardFacingCamera" type="Camera" parent="."]
far = 5000.0
script = ExtResource( 3 )

[node name="RearFacingCamera" type="Camera" parent="."]
far = 5000.0
script = ExtResource( 3 )

[node name="InGameUI" parent="." instance=ExtResource( 5 )]
